# night-shift-security

./: .env.example  .gitignore  .mcp.json  AGENTS.md  AUDIT.md  BOUNTY_RUN.md  CHANGELOG.md  METHODOLOGY.md  README.md  SPEC.md  SPEC_V5_COMPLETION.md  SUSTAINABILITY.md  SYSTEM_AUDIT_2026-06-18.md  adversarial_research_architecture.md  goal-reference.md  pyproject.toml  skills-lock.json  solodit-api-ref.md
.grok/: config.toml
foundry/: foundry.toml  setup.sh
hermes/: DAY_SOUL.md  MEMORY.seed.md  NIGHTSOUL_NSS_V4.md  SOUL.md  config.yaml.template  install-nightsoul-overlay.sh  install-profile.sh
scripts/: _add_reserve_concrete_candidates.py  _capture_aave_v3_measurement.py  _capture_kamino_measurement.py  _capture_measurement_json.py  _capture_morpho_measurement.py  _capture_solana_slot_measurement.py  _seed_solana_native_candidates.py
solana/: README.md  klend_account_discovery.py  klend_live_probes.py  klend_probes.py  klend_scope_patch.py  klend_tx.py  klend_v2.py  run_fixture_test.py  run_klend_harness.py  run_validator_replay.py  run_validator_test.sh  setup.sh  validator_profiles.py
sources/crucible/fuzz/kast/: Cargo.toml
sources/crucible/fuzz/kast/src/: main.rs
sources/kamino/klend_mirror/programs/klend_mirror/: Cargo.toml
sources/kamino/klend_mirror/programs/klend_mirror/src/: lib.rs
tests/: test_aave_v3_measured_delta.py  test_attack_hypotheses.py  test_auditvault.py  test_benchmarks.py  test_bounty_loop.py  test_bounty_loop_trials.py  test_bounty_scoring.py  test_cantina_scan.py  test_concrete_sequences.py  test_coordinator.py  test_cpcv.py  test_cron_registry_flip.py  test_cron_unpause.py  test_crypto_keccak.py  test_deduper.py  test_export_api.py  test_external_proposals.py  test_failure_trace_rsi.py  test_file_ranker.py  test_findings_store.py  test_fork.py  test_fork_live.py  test_fork_repro_labels.py  test_fork_scoring.py  test_fork_validation_abi_idl.py  test_full_registry_walk.py  test_git_patches.py  test_harness_gate.py  test_hipif.py  test_immunefi_investigate.py  test_immunefi_scan.py  test_immunefi_submission.py  test_impact.py  (+69 more)
(+715 files in other folders)
