[package]
name = "kast_fuzz"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
crucible-fuzzer = { git = "https://github.com/asymmetric-research/crucible", branch = "main" }
crucible-test-context = { git = "https://github.com/asymmetric-research/crucible", branch = "main" }

anchor-lang = "1.0.1"

solana-pubkey = "3.0"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-program = "3.0"
solana-instruction = "3.1"
solana-account = "3.0"

libafl = { version = "0.15.1", features = ["std", "cli", "prelude"] }
libafl_bolts = { version = "0.15.1", features = ["std"] }
arbitrary = { version = "1", features = ["derive"] }

anyhow = "1.0"
sha2 = "0.10"
ctrlc = "3.4"

[[bin]]
name = "invariant_test"
path = "src/main.rs"

[features]
invariant_test = []
