[package]
name = "klend_mirror"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "klend_mirror"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["event-cpi", "idl-build"] }
anchor-spl = { version = "0.31.1", features = ["token"] }
solana-program = "~2.1.0"
hashbrown = { workspace = true }
